--- a/experience.html
+++ b/experience.html
@@ -68,9 +68,10 @@
                     <li class="col-12 col-sm-12">Proficient in vital sign assessment and adept at assisting patients during examinations, prioritizing comfort and well-being</li>
                     <li class="col-12 col-sm-12">Efficiently manages medical records, schedules appointments, and addresses inquiries to maintain a smooth clinic flow</li>
                     <li class="col-12 col-sm-12">Assists in examinations, procedures, and surgeries, ensuring accurate and updated patient charts with meticulous attention to detail</li>
+                    <li class="col-12 col-sm-12">Scribes for an otolaryngologist part-time</li>
                     <li class="col-12 col-sm-12">Provides clear information on medications and treatment plans, offering guidance on proper self-care practices</li>
                     <li class="col-12 col-sm-12">Serves as an effective liaison between patients and healthcare providers, fostering seamless collaboration for optimal patient care</li>
-                    <li class="col-12 col-sm-12">Ensured the cleanliness and safety of the medical office, including sterilizing equipment and maintaining a tidy work environment</li>
+                    <li class="col-12 col-sm-12">Ensures the cleanliness and safety of the medical office, including sterilizing equipment and maintaining a tidy work environment</li>
                     <li class="col-12 col-sm-12">Utilizes eClinical Works for streamlined visit documentation, patient communication, and efficiency office operations</li>
                     <li class="col-12 col-sm-12">Worked collaboratively and efficiently with a team of trained healthcare professionals to provide high-quality patient care</li>
                 </ul>
@@ -86,18 +87,11 @@
                 <p class="col-12 col-sm-12 e-time"><i>May 2023 - Present</i></p>
                 <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
                 <ul class="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Crafts and implements brand strategies aligned with the clinic's values and aesthetic</li>
-                    <li class="col-12 col-sm-12">Ensures consistent brand representation</li>
-                    <li class="col-12 col-sm-12">Oversees the development and execution of digital marketing campaigns</li>
-                    <li class="col-12 col-sm-12">Manages online social media platforms to foster community engagement</li>
-                    <li class="col-12 col-sm-12">Creates compelling and informative content for social media and advertising</li>
-                    <li class="col-12 col-sm-12">Collaborates with medical professionals to translate complex procedures into accessible and engaging content for patients</li>
-                    <li class="col-12 col-sm-12">Develops and implements strategies to enhance patient experience</li>
-                    <li class="col-12 col-sm-12">Utilizes patient testimonials and success stories for effective marketing collateral</li>
-                    <li class="col-12 col-sm-12">Coordinates and executes promotional events, workshops, and seminars to showcase the clinic's expertise and services</li>
-                    <li class="col-12 col-sm-12">Works closely with the surgical team to accurately convey the clinic's unique approach to facial plastic surgery</li>
-                    <li class="col-12 col-sm-12">Monitors key performance indicators to assess the effectiveness of marketing strategies</li>
-                    <li class="col-12 col-sm-12">Establishes partnerships with local businesses, influencers, and organizations to expand the clinic's prsence in the commmunity</li>
+                    <li class="col-12 col-sm-12">Develops and implements brand strategies and digital marketing campaigns, ensuring consistent representation</li>
+                    <li class="col-12 col-sm-12">Manages online social media platforms, creates engaging content, and translates medical procedures for patients</li>
+                    <li class="col-12 col-sm-12">Enhances patient experience through strategic initiatives, utilizes testimonials for marketing, and coordinates promotional events</li>
+                    <li class="col-12 col-sm-12">Works with the surgical team to convey the clinic's unique approach and monitored key performance indicators.</li>
+                    <li class="col-12 col-sm-12">Establishes local partnerships to expand the clinic's community presence</li>
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
@@ -111,18 +105,17 @@
                 <p class="col-12 col-sm-12 e-time"><i>March 2016 - Present</i></p>
                 <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
                 <ul class="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Successfully manages photography projects, from planning and shooting to post-processing, ensuring high-quality images that meet client expectations</li>
-                    <li class="col-12 col-sm-12">Collaborates closely with clients to understand their unique personality and style, effectively capturing and showcasing their individuality within diverse environments</li>
-                    <li class="col-12 col-sm-12">Utilizes Adobe Suite, including Photoshop and Lightroom, to expertly manage the production and editing of images, ensuring high-quality results that meet client expectations</li>
-                    <li class="col-12 col-sm-12">Demonstrates advanced knowledge of camera bodies and equipment, applying principles of physics to achieve optimal image quality in various environmental conditions</li>
-                    <li class="col-12 col-sm-12">Delivers exceptional customer service by providing a seamless and engaging experience both online and during photography sessions, fostering strong client relationships and satisfaction</li>
-                    <li class="col-12 col-sm-12">Develops and implements a strategic business plan focused on meeting client needs while maximizing profitability, resulting in sustainable growth and success</li>
-                    <li class="col-12 col-sm-12">Builds and maintains a diverse clientele base, serving over 75 individuals across multiple counties in North Carolina, demonstrating versatility and adaptability in meeting diverse client needs</li>
-                    <li class="col-12 col-sm-12">Actively participates in community events and initiatives, offering pro bono photography services to local charities, schools, and non-profit organizations, contributing to the community's cultural enrichment and social well-being</li>
+                    <li class="col-12 col-sm-12">Successfully manages photography projects, from planning and shooting to post-processing, ensuring high-quality images</li>
+                    <li class="col-12 col-sm-12">Collaborates closely with clients, effectively capturing and showcasing their individuality within diverse environments</li>
+                    <li class="col-12 col-sm-12">Utilizes Adobe Photoshop and Lightroom, to expertly manage the production and editing of images</li>
+                    <li class="col-12 col-sm-12">Demonstrates advanced knowledge of camera bodies and equipment to achieve optimal image quality in various environmental conditions</li>
+                    <li class="col-12 col-sm-12">Delivers exceptional customer service by providing a seamless and engaging experience both online and during photography sessions</li>
+                    <li class="col-12 col-sm-12">Builds and maintains a diverse clientele base, serving across multiple counties in North Carolina</li>
+                    <li class="col-12 col-sm-12">Actively participates in community events and initiatives, offering pro bono photography services to local charities, schools, and non-profit organizations</li>
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
-                <img class="col-12 col-sm-12 col-lg-6" src="BRP_Fall_Portrait.jpg" onMouseDown="popupMsg('Unable to access image')">
+                <img id="saw_photo" class="col-12 col-sm-12 col-lg-6" src="BRP_Fall_Portrait.jpg" onMouseDown="popupMsg('Unable to access image')">
                 <a href="https://www.stephenwenzelphotography.com/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Stephen Wenzel Photography</a>
             </article>
 
@@ -191,39 +184,18 @@
                 <p class="col-12 col-sm-12 e-time"><i>August 2021 - April 2022</i></p>
                 <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
                 <ul class="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Volunteered with an organization dedicated to reducing the spread of COVID-19 variants, contributing to the collective effort to overcome this global health crisis</li>
-                    <li class="col-12 col-sm-12">Played a critical role in maintaining the continuity of UNC Chapel Hill's operations during the challenging times of the COVID-19 pandemic, serving the university's students, faculty, and staff</li>
-                    <li class="col-12 col-sm-12">Communicated effectively and respectfully with a diverse range of individuals, ensuring that everyone received the assistance and support they needed</li>
-                    <li class="col-12 col-sm-12">Demonstrated a keen understanding of how cultural backgrounds, values, and ethical principles can shape people's health care decisions and behavior</li>
-                    <li class="col-12 col-sm-12">Removed potential communication barriers to ensure that volunteers and the public could work together effectively, thereby advancing the mission of the organization</li>
-                    <li class="col-12 col-sm-12">Served as a knowledgeable resource for individuals seeking COVID-19 testing, staying up-to-date on the latest safe practices and guidelines to help people stay healthy and informed</li>
+                    <li class="col-12 col-sm-12">Developed understanding of how cultural backgrounds, values, and ethical principles can shape people's health care decisions and behavior</li>
+                    <li class="col-12 col-sm-12">Served as a resource staying up-to-date on the latest safe practices and guidelines to help people stay healthy and informed</li>
+                    <li class="col-12 col-sm-12">Participated to reduce COVID-19 prevalence in the Chapel Hill community</li>
+                    <li class="col-12 col-sm-12">Assisted in maintaining the continuity of UNC Chapel Hill's operations during the COVID-19 pandemic, serving the university's students, faculty, and staff</li>
+                    <li class="col-12 col-sm-12">Communicated effectively and respectfully with a diverse population, ensuring assistance and support</li>
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
                 <img id="cssc_pic" class="col-12 col-sm-12 col-lg-6" href="https://ipep.unc.edu/students/carolina-covid-19-student-services-corps-carolina-cssc/" src="CarolinaCSSC1-768x554.png" onMouseDown="popupMsg('Unable to access image')">
                 <a href="https://ipep.unc.edu/students/carolina-covid-19-student-services-corps-carolina-cssc/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Carolina COVID-19 Student Services Corps</a>
             </article>
-
-            <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <h4 class="col-12 col-sm-12 e-titles">Undergraduate Research Assistant</h4>
-                <h5 class="col-12 col-sm-12 e-co">Rogers Lab, Slep Lab - UNC Chapel Hill Department of Biology</h5>
-                <h5 class="col-12 col-sm-12 e-co">"Investigation of the Comparative Effects of Intralumenal Microtubule Acetylation on Drosophila S2 cells When Treated with Cytochalasin D"​</h5>
-                <p class="col-12 col-sm-12 e-time"><i>August 2021 - December 2021</i></p>
-                <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
-                <ul class="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Conducted a thorough analysis of scientific literature to gather relevant information crucial for experiments</li>
-                    <li class="col-12 col-sm-12">Formulated next-step hypotheses and devised effective strategies to test them using knowledge gained from prior experiments</li>
-                    <li class="col-12 col-sm-12">Performed experiments meticulously with a strong emphasis on accuracy and reproducibility</li>
-                    <li class="col-12 col-sm-12">Carefully analyzed and quantified the experimental data, and presented the results effectively to both scientific and non-scientific audiences</li>
-                </ul>
-            </article>
-            <article class="col-12 col-sm-9 col-lg-10 image_and_link">
-                <img class="col-12 col-sm-12 col-lg-6" src="https://drscdn.500px.org/photo/1067151255/m%3D900/v2?sig=287448e00429818e6b9f7ad6ff30ec013064a5f022428cd1dd50767676b4040f" onMouseDown="popupMsg('Unable to access image')">
-                <a href="http://rogerslab.unc.edu/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-1" target="blank">Rogers Lab</a>
-                <a href="http://www.sleplab.org/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-1 mb-3" target="blank">Slep Lab</a>
-                <a href="https://bio.unc.edu/undergraduate/research/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-1 mb-3" target="blank">UNC Biology Undergraduate Research</a>
-            </article>
-
+            
             <article class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Medical and Online Assistant</h4>
                 <h5 class="col-12 col-sm-12 e-co">Western Carolina Ear, Nose and Throat</h5>
@@ -238,22 +210,6 @@
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
                 <img class="col-12 col-sm-12 col-lg-6" src="https://drscdn.500px.org/photo/1067151256/m%3D900/v2?sig=c8bf9335a1c396f9c2a060c3336e2b3630dce36af937a90e16f34faab7edbc67" onMouseDown="popupMsg('Unable to access image')">
                 <a href="https://www.wncentdoctors.com/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Western Carolina ENT & Center for Hearing</a>
-            </article>
-
-            <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <h4 class="col-12 col-sm-12 e-titles">Volunteer Photographer</h4>
-                <h5 class="col-12 col-sm-12 e-co">Folkmoot International Dance Festival</h5>
-                <p class="col-12 col-sm-12 e-time"><i>Summers of 2018 - 2021</i></p>
-                <p class="col-12 col-sm-12 e-location">Waynesville, North Carolina</p>
-                <ul class="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Photographed all performances and events during the annual summer folk dance festival</li>
-                    <li class="col-12 col-sm-12">Produced over 2000 high-quality images each year, meticulously editing and enhancing 300 photos with Adobe Lightroom and Photoshop for optimal visual impact</li>
-                    <li class="col-12 col-sm-12">Utilized Instagram and Facebook social platforms to increase the client's social media presence, and promoted festival performances and events to expand outreach</li>
-                </ul>
-            </article>
-            <article class="col-12 col-sm-9 col-lg-10 image_and_link">
-                <img id="folkmoot" class="col-12 col-sm-12 col-lg-6" src="https://drscdn.500px.org/photo/1039207022/m%3D900/v2?sig=693296c3893d4c9c1188c7909b57706ebdf1d7acbdfef1987eedf1d6ecf11641" onMouseDown="popupMsg('Unable to access image')">
-                <a href="https://www.folkmoot.org/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Folkmoot's Website</a>
             </article>
 
             <article class="col-12 col-sm-12 col-lg-10 e-about">
