--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
             <article class="col-12 col-sm-6 col-lg-4 headshot_box">
                 <img id="headshot" src="transparent_headshot.png" onMouseDown="popupMsg('Unable to access image')">
             </article>
-            <article class="col-12 col-sm-12 col-md-6 col-lg-6 signature_title">
+            <article class="col-12 col-sm-12 col-md-6 col-lg-6 mt-2 signature_title">
                 <img id="signature_stephen" class="col-12 col-sm-7 col-md-12 col-lg-12" src="white_signature.png" onMouseDown="popupMsg('Unable to access image')">
                 <p id="title" class="col-12 col-sm-12 col-lg-12 text-center pt-2">ONLINE RESUME</p>
-                <p id="updated" class="col-12 col-sm-12 col-lg-12 text-center pt-2">(Updated March 2024)</p>
+                <p id="updated" class="col-12 col-sm-12 col-lg-12 text-center pt-2">(Updated June 2024)</p>
             </article>
         </section>
     </main>
